Changes
-------

0.11.0 (unreleased)
~~~~~~~~~~~~~~~~~~~

- Custom representation of OOBucket objects.
- Dropped Python 2.4 support.
- Slightly better error pages when you specify an invalid/nonexistent OID.


0.10.4 (2012-12-19)
~~~~~~~~~~~~~~~~~~~

- The previous release was completely broken (LP#1091716).  Fix the issue,
  and fix tox.ini to actually run functional tests in addition to unit tests.


0.10.3 (2012-12-06)
~~~~~~~~~~~~~~~~~~~

- Custom representation of persistent objects with no __repr__ to avoid
  showing misleading memory addresses (LP#1087138).


0.10.2 (2012-11-28)
~~~~~~~~~~~~~~~~~~~

- Bugfix for POSKeyErrors when viewing BTrees of non-trivial sizes
  (LP#953480).  This fixes a regression introduced in version 0.10.0.


0.10.1 (2012-11-27)
~~~~~~~~~~~~~~~~~~~

- Standalone app mode uses the Zope exception formatter for easier debugging.

- Bugfix for weird LocationError: '__class__' for some containers
  with custom traversal rules.

- Links to persistent objects in value representations now also use
  hex OIDs.


0.10.0 (2012-02-29)
~~~~~~~~~~~~~~~~~~~

- Browsing of transaction records (@@zodb_history).  Initial implementation so
  far, unbelievably slow when you have large databases (LP#907900).

- ZODB Browser now avoids writing to the database even in read-write mode.
  Previously when your objects had write-on-read semantics, those writes might
  have snuck in.

- More descriptive page titles (LP#931115).

- Show object size in the header (LP#497780).

- Expand truncated values by clicking on them (LP#931184).

- More user-friendly representation of multiline text values.

- Update maintainer email in setup.py.

- Better error message for "address already in use" errors.


0.9.0 (2011-10-21)
~~~~~~~~~~~~~~~~~~

- Make it possible to use zodbbrowser as a plugin for Zope 2.12.  Previously
  you could only use the standalone zodbbrowser app with Zope 2.12 databases.
